Replaced old GoO endpoint with updated one, to match the D6.5 Annex.
